...
            "state": "translated",
            "value": "Até %lld km"
          }
        }
      }
    },
    "Avaliar turno": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Avaliar turno"
          }
...
            "state": "translated",
            "value": "CPF ou CNPJ"
          }
        }
      }
    },
    "Cadastrar estabelecimento": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Cadastrar estabelecimento"
          }
...
            "state": "translated",
            "value": "Meus turnos"
          }
        }
      }
    },
    "Minhas vagas": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Minhas vagas"
          }
...
            "state": "translated",
            "value": "Ver posições e confirmações"
          }
        }
      }
    },
    "Detalhe da vaga": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Detalhe da vaga"
          }
...
            "state": "translated",
            "value": "Ver perfil público"
          }
        }
      }
    },
    "Perfil público": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Perfil público"
          }
...
